--- a/caseStudyWP/bib/refs.bib
+++ b/caseStudyWP/bib/refs.bib
@@ -1,3 +1,4 @@
+
 @article{holt_evaluating_2018,
 	title = {Evaluating Benchmarks of Biological Status for Data-limited Conservation Units of Pacific Salmon, Focusing on Chum Salmon in Southern {BC}},
 	pages = {87},
@@ -14,4 +15,34 @@
 	date = {2014},
 	langid = {english},
 	file = {Will - Inner South Coast Chum Stock Reconstructions (1953.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\LZ6IPMIA\\Will - Inner South Coast Chum Stock Reconstructions (1953.pdf:application/pdf},
+}
+
+@report{holtby_conservation_2007,
+	title = {Conservation Units for Pacific Salmon under the Wild Salmon Policy},
+	url = {https://waves-vagues.dfo-mpo.gc.ca/Library/334860.pdf},
+	pages = {358},
+	number = {2007/070},
+	institution = {Fisheries and Oceans Canada},
+	type = {Research Document},
+	author = {Holtby, L. Blair and Ciruna, Kristine  A.},
+	date = {2007},
+	file = {334860.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\A26ES6NW\\334860.pdf:application/pdf},
+}
+
+@article{debertin_marine_2017,
+	title = {Marine growth patterns of southern British Columbia chum salmon explained by interactions between density-dependent competition and changing climate},
+	volume = {74},
+	issn = {0706-652X, 1205-7533},
+	url = {http://www.nrcresearchpress.com/doi/10.1139/cjfas-2016-0265},
+	doi = {10.1139/cjfas-2016-0265},
+	abstract = {Thirty-nine years of scale growth measurements from Big Qualicum River chum salmon (Oncorhynchus keta) in southern British Columbia demonstrated that competition and climate variation affect marine growth and age-at-maturity. A longitudinal study design that accounted for correlation among individuals revealed growth at all ages was reduced when the biomass of North American chum, sockeye (Oncorhynchus nerka), and pink salmon (Oncorhynchus gorbuscha) was high. When North Paciﬁc Gyre Oscillation ({NPGO}) was positive, indicating increased primary productivity, predicted growth increased. Climate variation inﬂuenced competition effects. For instance, density-dependent competition effects increased when {NPGO} became more positive and Paciﬁc Decadal Oscillation became more negative (indicating cool conditions), causing the greatest range in predicted scale size. Chum salmon are likely to exhibit continued reduction in growth at age due to increased ocean temperatures driven by climate change and high aggregate salmon biomass that includes hatchery releases. If evidence of biomass and climate effects presented here are common among Paciﬁc salmon populations, reduction of hatchery releases should be considered.},
+	pages = {1077--1087},
+	number = {7},
+	journaltitle = {Canadian Journal of Fisheries and Aquatic Sciences},
+	shortjournal = {Can. J. Fish. Aquat. Sci.},
+	author = {Debertin, Allan J. and Irvine, James R. and Holt, Carrie A. and Oka, Gladys and Trudel, Marc},
+	urldate = {2021-01-28},
+	date = {2017-07},
+	langid = {english},
+	file = {Debertin et al. - 2017 - Marine growth patterns of southern British Columbi.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\WE5J4EFQ\\Debertin et al. - 2017 - Marine growth patterns of southern British Columbi.pdf:application/pdf},
 }
