--- a/caseStudyWP/bib/refs.bib
+++ b/caseStudyWP/bib/refs.bib
@@ -46,3 +46,17 @@
 	langid = {english},
 	file = {Debertin et al. - 2017 - Marine growth patterns of southern British Columbi.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\WE5J4EFQ\\Debertin et al. - 2017 - Marine growth patterns of southern British Columbi.pdf:application/pdf},
 }
+
+@report{canada_canadas_2005,
+	location = {Vancouver},
+	title = {Canada's policy for conservation of wild Pacific salmon},
+	url = {https://waves-vagues.dfo-mpo.gc.ca/Library/315577.pdf},
+	institution = {Fisheries and Oceans Canada},
+	editora = {Canada},
+	editoratype = {collaborator},
+	date = {2005},
+	langid = {english},
+	note = {{OCLC}: ocm61863454},
+	keywords = {Canada, Conservation Government policy, Pacific salmon},
+	file = {315577.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\XH8BPDZC\\315577.pdf:application/pdf},
+}
